# quax

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  run_tests.yml
docs/: .lora-example.md  index.md  requirements.txt
docs/api/: lora.md  quax.md
docs/examples/: custom_rules.ipynb  default_rules.ipynb  other.md  redispatch.ipynb
examples/: README.md
examples/named/: __init__.py  _core.py
examples/prng/: README.md  __init__.py  _core.py
examples/sparse/: _core.py
examples/structured_matrices/: _core.py
quax/: __init__.py  _core.py  core.py
quax/examples/: README.md  __init__.py
quax/examples/lora/: README.md  _core.py
quax/examples/named/: README.md  __init__.py  _core.py
quax/examples/prng/: README.md  _core.py
quax/examples/sparse/: README.md  __init__.py  _core.py
quax/examples/structured_matrices/: README.md  __init__.py  _core.py
quax/examples/unitful/: __init__.py  _core.py
quax/examples/zero/: README.md  __init__.py  _core.py
quax/lora/: __init__.py  _core.py  core.py
quax/named/: __init__.py  core.py
quax/prng/: __init__.py  core.py
quax/sparse/: __init__.py  core.py
quax/structured_matrices/: __init__.py  core.py
quax/zero/: __init__.py  _core.py  core.py
tests/: conftest.py  helpers.py  myarray.py  requirements.txt  test_.py  test_cond.py  test_core.py  test_lora.py  test_named.py  test_prng.py  test_sparse.py  test_structure_matrix.py  test_while.py  test_zero.py
tests/benchmark/: test_numpy.py
tests/test_lax/: myarray.py  test_jax_array.py  test_myarray.py
tests/test_numpy/: test_jax_array.py  test_myarray.py
